tests/paczka1/fuzzy1/45836102.err
Error in line 6: ljYavAZaJT A616 -3,2
Error in line 9: u5HU A616 10,5
Error in line 10: u5HU A375 21,7
Error in line 3: ljYavAZaJT A616 55,9
Error in line 13: Ds0qUgb A616 78,4
Error in line 5: A638 A616 24,3
Error in line 26: ljYavAZaJT S363 69,2
Error in line 24: Bs7W S363 55,8
Error in line 35: Bs7W A616 29,6
